--- a/32/2-1 STM32工程模版/Objects/Project.build_log.htm
+++ b/32/2-1 STM32工程模版/Objects/Project.build_log.htm
@@ -5,11 +5,11 @@
 <h2>Tool Versions:</h2>
 IDE-Version: μVision V5.41.0.0
 Copyright (C) 2024 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: 1 1, 1, LIC=V85FJ-USG7D-E0JN4-F5AN7-V3YTM-USM95
+License Information: 1 shuai, 1, LIC=4ZLZX-HIME6-9ZBWW-QY09F-QS640-7QYNR
  
 Tool Versions:
 Toolchain:       MDK-ARM Professional  Version: 5.41.0.0
-Toolchain Path:  D:\Develop\keil5\Keil_V5\ARM\ARMCC\Bin
+Toolchain Path:  D:\develop\Keil_v5\ARM\ARMCC\Bin
 C Compiler:      Armcc.exe V5.06 update 7 for Certification (build 960)
 Assembler:       Armasm.exe V5.06 update 7 for Certification (build 960)
 Linker/Locator:  ArmLink.exe V5.06 update 7 for Certification (build 960)
@@ -21,13 +21,40 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.3.0.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-C:\Users\shuai00115\Desktop\kail-project\32\2-1 STM32工程模版\Project.uvprojx
+D:\Develop\code\kail Project\32\2-1 STM32工程模版\Project.uvprojx
 Project File Date:  02/11/2025
 
 <h2>Output:</h2>
-*** Using Compiler 'V5.06 update 7 for Certification (build 960)', folder: 'D:\Develop\keil5\Keil_V5\ARM\ARMCC\Bin'
+*** Using Compiler 'V5.06 update 7 for Certification (build 960)', folder: 'D:\develop\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target_1'
+assembling startup_stm32f10x_md.s...
+compiling misc.c...
+compiling stm32f10x_can.c...
+compiling core_cm3.c...
+compiling stm32f10x_bkp.c...
+compiling system_stm32f10x.c...
+compiling stm32f10x_cec.c...
+compiling stm32f10x_dma.c...
+compiling stm32f10x_dac.c...
+compiling stm32f10x_exti.c...
+compiling stm32f10x_dbgmcu.c...
+compiling stm32f10x_crc.c...
+compiling stm32f10x_fsmc.c...
+compiling stm32f10x_gpio.c...
+compiling stm32f10x_flash.c...
+compiling stm32f10x_adc.c...
+compiling stm32f10x_i2c.c...
+compiling stm32f10x_iwdg.c...
+compiling stm32f10x_pwr.c...
+compiling stm32f10x_rtc.c...
+compiling stm32f10x_rcc.c...
+compiling stm32f10x_sdio.c...
+compiling stm32f10x_spi.c...
 compiling main.c...
+compiling stm32f10x_usart.c...
+compiling stm32f10x_wwdg.c...
+compiling stm32f10x_tim.c...
+compiling stm32f10x_it.c...
 linking...
 Program Size: Code=1044 RO-data=252 RW-data=0 ZI-data=1632  
 FromELF: creating hex file...
@@ -41,10 +68,10 @@ Package Vendor: Keil
                 STMicroelectronics STM32F1 Series Device Support, Drivers and Examples
 
 <h2>Collection of Component include folders:</h2>
-  D:/Develop/keil5/Packs/Keil/STM32F1xx_DFP/2.2.0/Device/Include
+  D:/Develop/Keil_v5/ARM/PACK/Keil/STM32F1xx_DFP/2.2.0/Device/Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
